--- a/StandardLibraries/CentralSnippets/CentralSnippets.csproj
+++ b/StandardLibraries/CentralSnippets/CentralSnippets.csproj
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Core\Core.csproj" />
+    <ProjectReference Include="..\..\Core\Pure.Core.csproj" />
   </ItemGroup>
 
 </Project>
