--- a/Frontends/Notebook/Notebook.csproj
+++ b/Frontends/Notebook/Notebook.csproj
@@ -24,7 +24,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\..\Core\Core.csproj" />
+		<ProjectReference Include="..\..\Core\Pure.Core.csproj" />
 	</ItemGroup>
 
 </Project>
