--- a/StandardLibraries/Python/Python.csproj
+++ b/StandardLibraries/Python/Python.csproj
@@ -16,4 +16,8 @@
 		<PackageReference Include="pythonnet" Version="3.0.3" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <ProjectReference Include="..\..\..\Parcel\Parcel_NExT\C#\Parcel.NExT\CoreEngines\Parcel.CoreEngine\Parcel.CoreEngine.csproj" />
+	</ItemGroup>
+
 </Project>
