--- a/UnitTests/CoreTest/CoreTest.csproj
+++ b/UnitTests/CoreTest/CoreTest.csproj
@@ -22,6 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\Parcel\Parcel_NExT\C#\Parcel.NExT\CoreEngines\Parcel.NExT.Interpreter\Parcel.NExT.Interpreter.csproj" />
     <ProjectReference Include="..\..\Core\Pure.Core.csproj" />
   </ItemGroup>
 
