[Feature] Parcel NExT Integration (#2)
* Add Parcel.CoreEngine reference
* Update dependencies
* Version update
* Remove unnecessary dependencies
* Rename Core to Pure.Core
* General consolidation and dependency update
* Consolidate types; Migrate code into Parcel NExT
* Refine documentation
* Solution clean up, update doc
- Rename wiki to manual
* Recreate Wiki for smaller topics
* Clean up and update build settings
* [Clarification] Try to clarify/remove the use of "Standard Library"
- Pure 2 will not be offering any "standard library" or custom libraries. Instead, it will be just part of Parcel NExT ecosystem.
- All "out of the box" libraries offered are likely going to be through Parcel packages in the future
- For really trivial stuff (that we might not create dedicated assemblies), we will temporarily offer snippets as "macros". Ideally, eventually, all of such things are collected into Pure packages.
* [Manual] Update manual, format properly as textbook
* Misc. notes
* Update CentralSnippets.csproj
* Update README.md

--- a/StandardLibraries/CentralSnippets/CentralSnippets.csproj
+++ b/StandardLibraries/CentralSnippets/CentralSnippets.csproj
@@ -12,11 +12,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="RestSharp" Version="110.2.0" />
+    <PackageReference Include="RestSharp" Version="111.2.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Core\Core.csproj" />
+    <ProjectReference Include="..\..\..\Parcel\Parcel_NExT\C#\Parcel.NExT\CoreEngines\Parcel.NExT.Interpreter\Parcel.NExT.Interpreter.csproj" />
   </ItemGroup>
 
 </Project>
